Update custom styles, fix dark mode issue

--- a/src/components/layout.scss
+++ b/src/components/layout.scss
@@ -308,7 +308,7 @@ h3,
 h4,
 h5,
 h6 {
-  color: #333333;
+  color: #24292E;
 
   .theme-dark & {
     color: #222222;
@@ -658,7 +658,7 @@ pre tt:after {
 
 body {
   font-family: 'Euclid Circular B', sans-serif;
-  color: #333;
+  color: #24292E;
   font-size: 16px;
   line-height: 22px;
 }
@@ -670,7 +670,7 @@ body {
 .hs-form-field input {
   height: 40px;
   background-color: #ffffff;
-  border: 1px solid #333333;
+  border: 1px solid #24292E;
   border-radius: 10px;
   padding: 0 15px;
   width: 100%;
@@ -722,7 +722,7 @@ input[type='submit'].hs-button {
 
 .paragraph {
   font-family: 'Euclid Circular B', sans-serif;
-  color: #333;
+  color: #24292E;
   font-size: 16px;
   font-weight: 400;
 }
@@ -1372,7 +1372,7 @@ body.dark-mode {
     font-weight: 400;
     font-size: 14px;
     line-height: 152.16%;
-    color: #333333;
+    color: #24292E;
     width: 290px;
     position: absolute;
     left: 50%;
@@ -1710,3 +1710,6 @@ body.dark-mode .snaps-color-secondary {
   color: #fff;
 }
 
+.italic {
+  font-style: italic;
+}
